# backend-server

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  package.json  pyproject.toml  release.config.js
.gitlab-ci/: build.yml  common.yml  deploy.yml  lint.yml  prepare.yml  release.yml  test.yml
.gitlab-ci/services/: nginx.template.conf  stack.template.yml
