[project]
name = "backend-server"
version = "0.0.1"
description = "Working title"
authors = [
    {name = "Kim Kang Min", email = "cgextra@daum.net"},
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "django-admin-inline-paginator (>=0.4.0,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "ftrack-python-api (==3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "gunicorn (>=22.0.0,<23.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
ipykernel = "^6.29.5"

[pytest.ini_options]
DJANGO_SETTINGS_MODULE = "infrastructure.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.black]
line-length = 79
target-version = ["py313"]
skip-string-normalization = true
